# gaminganywhere

./: .clang-format  .gitignore  CMakeLists.txt
android/jni/src/: android-decoders.cpp  android-decoders.h  controller.cpp  controller.h  ctrl-msg.cpp  ctrl-msg.h  ctrl-sdl.cpp  ctrl-sdl.h  dpipe.cpp  dpipe.h  ga-avcodec.cpp  ga-avcodec.h  ga-common.cpp  ga-common.h  ga-conf.cpp  ga-conf.h  ga-confvar.cpp  ga-confvar.h  ga-module.h  ga-win32.h  libgaclient.cpp  libgaclient.h  minih264.cpp  minih264.h  minivp8.cpp  minivp8.h  qosreport.cpp  qosreport.h  rtspclient.cpp  rtspclient.h  rtspconf.cpp  rtspconf.h  vconverter.cpp  vconverter.h  vsource.h
client/: CMakeLists.txt
client/src/: generic_client.cpp  main.cpp  minih264.cpp  minih264.hpp  minivp8.cpp  minivp8.hpp  qos_report.cpp  qos_report.hpp  rtsp_client.cpp  rtsp_client.hpp
core/: CMakeLists.txt
core/inc/ga/: asource.hpp  avcodec.hpp  common.hpp  conf.hpp  confvar.hpp  controller.hpp  crc.hpp  ctrl_msg.hpp  dpipe.hpp  encoder_common.hpp  module.hpp  rtsp_conf.hpp  vconverter.hpp  vsource.hpp  win32.hpp
core/inc/ga/ctrl/: ctrl.hpp
core/src/: asource.cpp  avcodec.cpp  common.cpp  conf.cpp  confvar.cpp  controller.cpp  crc.cpp  ctrl.cpp  ctrl_msg.cpp  dpipe.cpp  encoder_common.cpp  module.cpp  rtsp_conf.cpp  vconverter.cpp  vsource.cpp  win32.cpp
module/asource-alsa/: asource-alsa.cpp  ga-alsa.h
module/asource-pulseaudio/: asource-pulseaudio.cpp
module/asource-system/: asource-system.cpp  ga-alsa.cpp  ga-alsa.h  ga-win32-wasapi.cpp  ga-win32-wasapi.h
module/ctrl-sdl/: ctrl-sdl.cpp  ctrl-sdl.h
module/encoder-audio/: encoder-audio.cpp
module/encoder-mfx/: allocator.cpp  allocator.h  encoder-mfx.cpp  mfx-common.cpp  mfx-common.h  naldump.cpp  sample.cpp
module/encoder-nvenc/: NvEncoderCommandParser.cpp  NvEncoderLowLatency.cpp  NvEncoderLowLatency.h  NvEncoderPreProcessor.cpp  NvHWEncoder.cpp  dynlink_cuda.cpp  encoder-nvenc.cpp
module/encoder-video/: encoder-video.cpp
module/encoder-vpu/: encoder-vpu.cpp  vpu-common.cpp  vpu-common.h
module/encoder-vpu/vpu/: vpu-common.cpp  vpu-common.h
module/encoder-vpu/vpuwrap/: vpu-common.cpp  vpu-common.h
module/encoder-x264/: encoder-x264.cpp
module/filter-rgb2yuv/: filter-rgb2yuv.cpp
module/server-ffmpeg/: rtspserver.cpp  rtspserver.h  server-ffmpeg.cpp  server-ffmpeg.h
module/server-ffmpeg/ffmpeg-1.1/: avformat.h  (+10 more)
module/server-live555/: ga-audiolivesource.cpp  ga-audiolivesource.h  ga-liveserver.cpp  ga-liveserver.h  ga-mediasubsession.cpp  ga-mediasubsession.h  ga-qossink.cpp  ga-qossink.h  ga-videolivesource.cpp  ga-videolivesource.h  server-live555.cpp  server-live555.h
module/streamer-omx/: omx-streamer.cpp  omx-streamer.h  streamer-omx.cpp
module/vsource-desktop/: ga-osx.h  ga-win32-common.cpp  ga-win32-common.h  ga-win32-d3d.cpp  ga-win32-d3d.h  ga-win32-dfm.cpp  ga-win32-dfm.h  ga-win32-dfmirage.h  ga-win32-gdi.cpp  ga-win32-gdi.h  ga-xwin.cpp  ga-xwin.h  vsource-desktop-dfm.cpp  vsource-desktop.cpp
server/event-driven/: ctrl-sdl.cpp  ctrl-sdl.h  ga-hook-common.cpp  ga-hook-common.h  ga-hook-coreaudio.cpp  ga-hook-coreaudio.h  ga-hook-gl.cpp  ga-hook-gl.h  ga-hook-sdl.cpp  ga-hook-sdl.h  ga-hook-sdl2.cpp  ga-hook-sdl2.h  ga-hook-sdl2audio.cpp  ga-hook-sdl2audio.h  ga-hook-sdlaudio.cpp  ga-hook-sdlaudio.h  ga-hook-winmm.cpp  ga-hook-winmm.h  ga-hook.cpp  ga-server-event-driven.cpp  hook-common.h  hook-function.cpp  hook-function.h  sdl12-audio.h  sdl12-event.h  sdl12-mouse.h  sdl12-video.h
server/event-posix/: elf_hook.h  ga-hook-common.cpp  ga-hook-common.h  ga-hook-gl.cpp  ga-hook-gl.h  ga-hook-lib.cpp  ga-hook-lib.h  ga-hook-pulse.cpp  ga-hook-pulse.h  ga-hook-sdl.cpp  ga-hook-sdl.h  ga-hook-sdl2.cpp  ga-hook-sdl2.h  ga-hook-sdl2audio.cpp  ga-hook-sdl2audio.h  ga-hook-sdlaudio.cpp  ga-hook-sdlaudio.h  ga-server-event-driven.cpp  mach_hook.h  sdl12-audio.h  sdl12-event.h  sdl12-mouse.h  sdl12-video.h
server/periodic/: ga-server-periodic.cpp
